实现注册功能
1.注册功能能够正常实现了，利用Spring以及Hibernate
2.对现有代码进行了一下小的重构

--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,10 @@ dependencies {
     
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
 	compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.10.Final'
+	
+	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
+	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.7-dmr'
+	
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:21.0'
