--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,24 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
     
-    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-web"){
+    	exclude group: 'ch.qos.logback', module: 'logback-core'
+    	exclude group: 'ch.qos.logback', module: 'logback-classic'
+    }
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    
+    //日志所需jar包
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+	
+	// https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
+	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.2'
+	
+	// https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
+	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8.2'
+	
+	// https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl
+	testCompile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.8.2'	
+    
 }
 
