--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,6 @@ dependencies {
     //kotlin的反射机制jar包是独立的，所以没有加上这个jar包的话一定会报错的
 	compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: "$kotlin_version"
     
-    
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0-b07'
     
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
@@ -70,9 +69,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     
     compile("org.springframework.boot:spring-boot-starter-web"){
+    	exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
     	exclude group: 'ch.qos.logback', module: 'logback-core'
     	exclude group: 'ch.qos.logback', module: 'logback-classic'
     }
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-log4j2
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-log4j2', version: '1.5.6.RELEASE'
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
     
     //日志所需jar包
@@ -86,7 +89,7 @@ dependencies {
 	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8.2'
 	
 	// https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl
-	testCompile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.8.2'	
+	compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.8.2'	
     
 }
 
